Adding a few abilities

--- a/PotatoMoba.html
+++ b/PotatoMoba.html
@@ -253,7 +253,9 @@
                 <div class="ability-box">
                     <div style="background-image: url(imgs/draped.jpg);" class="ability-bg-image"></div>
                     <h3>Drape</h3>
-                    <p><strong>Channeling</strong>: Potato drapes on an opponent's lap, making them unable to move. Both Potato and the target cannot move during this ability. Potato gains <span class="green">+10</span> to accuracy and <span class="green">+20%</span> to damage when attacking the target.</p>
+                    <p><strong>Channeling</strong>: Potato drapes on an either opponent's or an ally's lap. Neither Potato nor target can move during this ability.</p>
+                    <p><strong>Ally:</strong> 120 seconds channel. Both Potato and the ally gain <span class="green">+100</span> hp per second recovery <span class="green">+100</span> mp per second recovery. If the entirety of the 120 seconds has been successfully channeled, both Potato and the allied hero gain 1 level's worth of exp.</p>
+                    <p><strong>Opponent:</strong> 5 seconds channel. Potato gains <span class="green">+10</span> to accuracy and <span class="green">+30%</span> to damage when attacking the target.</p>
                 </div>
                 <div class="ability-box">
                     <div style="background-image: url(imgs/bellyrub.jpg);" class="ability-bg-image"></div>
@@ -271,6 +273,21 @@
                     <p><strong>Channeling</strong>: 5 seconds. Potato aggressively shakes the target back and forth 5 times.</p>
                     <p><strong>Completion</strong>: If the opponent has less than <span class="red">400</span> HP or less than <span class="red">40%</span> of their max HP, they instantly die. Otherwise, they take <span class="green">100 + 30%</span> of their max HP in direct damage.</p>
                     <p><strong>Interruption</strong>: If interrupted, the opponent takes prorated damage based on the completed channeling time.</p>
+                </div>
+                <div class="ability-box">
+                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <h3>Sleep - Sideways!!!</h3>
+                    <p><strong>Channeling</strong>: 60 seconds. Potato lies on his side and takes a very relaxing nap. During the nap, potato is completely stunned, but gains 50 hp per second and 50 mp per second recovery and +20 armor. Potato may end his nap at any moment.</p>
+                </div>
+                <div class="ability-box">
+                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <h3>Sleep - Circle!!!</h3>
+                    <p><strong>Channeling</strong>: 60 seconds. Potato goes into a circle and takes a very safe nap. During the nap, potato is completely stunned, but gains 50% evasion and 90% damage reduction from all sources. Potato may end his nap at any moment.</p>
+                </div>
+                <div class="ability-box">
+                    <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
+                    <h3>Sleep - Cuddle!!!</h3>
+                    <p><strong>Channeling</strong>: 60 seconds. Potato cuddles up to one ally hero and takes a very loving nap. During the nap, Potato and the allied hero are both completely stunned, but both Potato and the allied hero gain 100 hp per second and 50 mp per second recovery. Either Potato or the allied hero may end this nap at any moment, waking up both heroes.</p>
                 </div>
                 <div class="ability-box">
                     <div style="background-image: url(imgs/placeholder.jpg);" class="ability-bg-image"></div>
