Adding a strategy section

--- a/PotatoMoba.html
+++ b/PotatoMoba.html
@@ -382,6 +382,19 @@
                 <p>With "Fetch" and "Tini," Potato can traverse the map quickly and scout enemy positions. His ability to manipulate size and evade detection makes him valuable for gathering intelligence and making surprise attacks.</p>
             </div>
         </div>
+        <div id="strategies" class="full-section">
+            <h2>Strategic Play with Potato</h2>
+            <p>Potato's unique blend of immortality and versatile abilities makes him a formidable hero in any MOBA game. Here are a few strategies to maximize his potential on the battlefield:</p>
+            <ul>
+                <li><strong>Early Game Caution:</strong> Despite his weaker early game, use Potato's evasion and mobility to harass enemies and avoid engagements. Focus on gathering resources and leveling up to unleash his full potential in mid to late game.</li>
+                <li><strong>Initiating Fights:</strong> Utilize Potato's "Pounce" to initiate fights. Its ability to stun enemies makes it an excellent opening move, followed by "Shaking!!!" to deal substantial damage to key targets.</li>
+                <li><strong>Team Support:</strong> Potato's abilities like "Mouthing - Weak" and "Mouthing - Strong" are crucial in team fights. Use these to heal and buff your allies or slow down and weaken opponents, shifting the tide of battle in your favor.</li>
+                <li><strong>Distraction and Disruption:</strong> Potato can excel at disrupting enemy strategies. Use his "Drape" ability on critical enemy heroes during team fights to immobilize them and reduce their effectiveness.</li>
+                <li><strong>Maximizing Immortality:</strong> Exploit Potato's immortality by taking calculated risks. Engage in battles where you can force the enemy to focus on you, allowing your team to capitalize on the chaos. Remember, Potato's recovery is a key strategic tool that can be used to make daring plays without the permanent consequences of death.</li>
+                <li><strong>End Game Strategies:</strong> In the late game, ensure Potato is at the center of team fights. His ability to absorb damage and disrupt enemy lines can secure crucial objectives and lead your team to victory.</li>
+            </ul>
+            <p>By adapting these strategies, players can use Potato not just as a damage dealer but as a dynamic hero capable of swinging the momentum of the game. Remember, the key to mastering Potato is understanding the timing and combination of his abilities to maximize both his survival and impact.</p>
+        </div>
     </div>
 </body>
 </html>
