--- a/PotatoMoba.html
+++ b/PotatoMoba.html
@@ -15,6 +15,7 @@
             background-color: #f4f4f9;
             margin: 0;
             padding: 20px;
+            min-width: 1080px !important;
         }
 
         .container::before {
