no top margin on title

--- a/PotatoMoba.html
+++ b/PotatoMoba.html
@@ -131,6 +131,10 @@
             /* padding-bottom: 2px; */
         }
 
+        h1#title {
+            margin-top: 0;
+        }
+
         h1, h2, h3 {
             text-align: center;
             color: #333;
@@ -318,7 +322,7 @@
 
 <body>
     <div class="container">
-        <h1>Potato: The Unstoppable Pup</h1>
+        <h1 id="title">Potato: The Unstoppable Pup</h1>
         <div id="top-grid">
             <div>
                 <img src="imgs/105.jpg" alt="Potato" class="large-image">
